--- a/IdentityServer7.AccessTokenValidation.csproj
+++ b/IdentityServer7.AccessTokenValidation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,7 +10,7 @@
     <Company>Braspin</Company>
     <PackageId>Braspin.$(AssemblyName)</PackageId>
     <PackageProjectUrl>https://github.com/braspin/IdentityServer7.AccessTokenValidation</PackageProjectUrl>
-    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/braspin/IdentityServer7.AccessTokenValidation</RepositoryUrl>
   </PropertyGroup>
 
